src/components/TokenLocking/styles.module.css
.singleTile {
  position: absolute;
  top: 0px;
  right: 80px;
  color: var(--mui-palette-secondary-main);
}

.doubleTile {
  position: absolute;
  bottom: 15px;
  right: 0px;
  color: var(--mui-palette-secondary-main);
}

.badge :global .MuiBadge-badge {
  right: 4px;
  bottom: 5px;
  height: 6px;
  min-width: 6px;
}

.boostInfoBox {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.bordered {
  border-radius: 6px;
  border: var(--mui-palette-border-light) 1px solid;
}

.boostBubble {
  border-radius: 100%;
  background-color: var(--mui-palette-background-light);
  display: flex;
  align-items: center;
  justify-content: center;
  width: 86px;
  height: 86px;
}

.amountDisplay {
  line-height: 2em;
  font-weight: 700;
  display: inline-flex;
  gap: 4px;
  align-items: center;
  z-index: 1;
}

.badge :global .MuiBadge-badge {
  bottom: 4px;
  right: 4px;
  background-color: var(--mui-palette-secondary-main);
}

.maxButton {
  border: 0;
  background: none;
  color: var(--mui-palette-primary-main);
  padding: 0;
  font-size: 16px;
  font-weight: bold;
  cursor: pointer;
}

.gauge {
  transition: width 200ms;
}

@keyframes highlight {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.2);
  }
  100% {
    transform: scale(1);
  }
}

.highlight {
  animation: highlight 1s;
}

.gradientText {
  background: linear-gradient(225deg, #5fddff 12.5%, #12ff80 88.07%);
  background-clip: text;
  color: transparent;
}

.steps {
  z-index: 1;
}

.step {
  position: relative;
  padding-left: 40px;
  margin-bottom: 40px;
  counter-increment: item;
}

.step:last-child {
  margin-bottom: 0;
}

.step:before {
  content: counter(item);
  width: 24px;
  height: 24px;
  display: block;
  background: #636669;
  border-radius: 50%;
  color: #121312;
  text-align: center;
  position: absolute;
  left: 0;
}

.step:after {
  content: '';
  left: 12px;
  top: 36px;
  position: absolute;
  height: calc(100% - 16px);
  width: 1px;
  background-color: #303033;
}

.activeStep:before {
  background-color: #12ff80;
}

.activeStep:after {
  background-color: #12ff80;
}

.comingSoon {
  background-color: #303033;
  border-radius: 4px;
  padding: 4px 8px;
  position: absolute;
  margin-left: 8px;
}

.stepDate {
  background-color: #121312;
  padding: 20px;
  border-radius: 6px;
}

.rewards {
  position: relative;
}

.rewardsBackground {
  pointer-events: none;
}

.rewardsBackground:before {
  content: '';
  background: radial-gradient(41.34% 41.34% at 50% 50%, #29b6f6 0%, transparent 82.5%);
  position: absolute;
  width: 500px;
  height: 500px;
  top: -200px;
  left: 100px;
  opacity: 0.2;
}

.rewardsBackground:after {
  content: '';
  background: radial-gradient(41.34% 41.34% at 50% 50%, rgba(18, 255, 128, 0.6) 0%, rgba(18, 255, 128, 0) 82.5%);
  position: absolute;
  width: 700px;
  height: 700px;
  top: -100px;
  left: -250px;
  opacity: 0.2;
}

.rewards:after {
  content: '';
  left: 12px;
  top: -4px;
  position: absolute;
  height: calc(100% - 16px);
  width: 1px;
  background-color: #303033;
}

.diamondImage {
  text-align: center;
}

.milesReceipt {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 90%;
  display: flex;
  overflow: hidden;
}

.leftReceipt,
.rightReceipt {
  background-color: #121312;
  border-radius: 20px;
  padding: 40px;
  height: 537px;
  width: 100%;
}

.leftReceipt {
  position: relative;
  flex-grow: 1;
}

.leftReceipt:after {
  content: '';
  border-right: 1px dashed white;
  position: absolute;
  right: 0;
  top: 20px;
  height: calc(100% - 40px);
}

.barcode {
  position: absolute;
  right: 0px;
}

.closeButton {
  position: absolute;
  right: 24px;
  top: 24px;
  z-index: 1;
}

@media (max-width: 899px) {
  .milesReceipt {
    width: 100%;
    height: 100%;
    overflow: auto;
  }

  .leftReceipt,
  .rightReceipt {
    border-radius: 0px;
  }
  .barcode,
  .closeButton {
    right: 0px;
  }

  .leftReceipt:after {
    display: none;
  }

  .leftReceipt {
    border-bottom: 1px dashed white;
  }
}

.gradientBackground {
  position: absolute;
  width: 1000px;
  height: 1000px;
  opacity: 0.3;
  z-index: 1;
  top: -200px;
  left: -100px;
  background: radial-gradient(41.34% 41.34% at 50% 50%, rgba(18, 255, 128, 0.6) 0%, rgba(18, 255, 128, 0) 82.5%);
  pointer-events: none;
}

.sidebarGradientBackground {
  position: absolute;
  width: 400px;
  height: 400px;
  opacity: 0.3;
  z-index: 1;
  top: 700px;
  left: 50px;
  background: radial-gradient(41.34% 41.34% at 50% 50%, rgba(41, 182, 246, 0.5) 0%, rgba(18, 255, 128, 0) 82.5%);
  pointer-events: none;
}

.unlockGradient {
  background: radial-gradient(41.34% 41.34% at 50% 50%, #ff8061 0%, rgba(255, 128, 97, 0) 82.5%);
}

.lockingHeader {
  display: flex;
  flex-direction: row;
  align-items: center;
}

@media (max-width: 599px) {
  .lockingHeader {
    flex-direction: column;
    align-items: flex-start;
  }
}

